Fixed minor layout issues with ads

--- a/website/macos-big-sur-icons/src/components/app.less
+++ b/website/macos-big-sur-icons/src/components/app.less
@@ -182,8 +182,14 @@ select{
     height: fit-content !important;
 }
 
+.lgbt-wrapper .card-no-ad{
+    position: relative;
+    top: 0px;
+    height: fit-content;
+}
+
 .lgbt-wrapper .support-page{
-    transform: translateX(-50%);
+    transform: translate(-50%, 0%);
 }
 
 .coral--dark .instructions-item{
@@ -982,12 +988,6 @@ coral-buttongroup button{
 
 .coral--light .underline{
     color: var( --coral-dark-border);
-}
-
-.card-no-ad{
-    position: relative;
-    top: 0px;
-    height: fit-content;
 }
 
 .card-hover{
